# lightup-a42c

./: .clang-format  .gitignore  .mailmap  CMakeLists.txt  Makefile  README.md  game.c  game.h  game_aux.c  game_test_aothmani.c  game_test_commun.c  game_test_sazarfane.c  game_test_tkattan.c  game_text.c  queue.c  test_queue.c
