cmake_minimum_required(VERSION 3.0)

project(lightup C)

include(CTest)
enable_testing()

set(CMAKE_C_FLAGS "-std=c99 -g -Wall")
add_executable(game_text game_text.c)
add_executable(game_test_tkattan game_test_tkattan.c)
add_executable(game_test_aothmani game_test_aothmani.c)
add_executable(game_test_sazarfane game_test_sazarfane.c)
add_executable(test_queue test_queue.c)

add_library(game game.c game_aux.c queue.c game_ext.h)
add_library(game_test game_test_commun.c)
add_library(queue_test queue.c)
target_link_libraries(test_queue queue_test)
target_link_libraries(game_text game)
target_link_libraries(game_test_tkattan game game_test)
target_link_libraries(game_test_aothmani game game_test)
target_link_libraries(game_test_sazarfane game game_test)

add_test(test_new_free ./test_queue init_free)
add_test(test_push_head ./test_queue push_head)
add_test(test_pop_head ./test_queue pop_head)
add_test(test_push_tail ./test_queue push_tail)
add_test(test_pop_tail ./test_queue pop_tail)
add_test(test_length ./test_queue length)
add_test(test_empty ./test_queue empty)
add_test(test_clear ./test_queue clear)

add_test(test_game_check_move ./game_test_tkattan game_check_move)
add_test(test_game_play_move ./game_test_tkattan game_play_move)
add_test(test_game_update_flags ./game_test_tkattan game_update_flags)
add_test(test_game_is_over ./game_test_tkattan game_is_over)
add_test(test_game_restart ./game_test_tkattan game_restart)
add_test(test_game_restart ./game_test_tkattan game_restart)
add_test(test_game_undo ./game_test_tkattan game_undo)
add_test(test_game_redo ./game_test_tkattan game_redo)

add_test(test_game_print ./game_test_aothmani game_print)
add_test(test_game_default ./game_test_aothmani game_default)
add_test(test_game_default_solution ./game_test_aothmani game_default_solution)
add_test(test_game_delete ./game_test_aothmani game_delete)
add_test(test_game_is_blank ./game_test_aothmani game_is_blank)
add_test(test_game_is_lightbulb ./game_test_aothmani game_is_lightbulb)
add_test(test_game_is_lighted ./game_test_aothmani game_is_lighted)
add_test(test_game_has_error ./game_test_aothmani game_has_error)
add_test(test_game_get_flags ./game_test_aothmani game_get_flags)
add_test(test_game_size_wrapping ./game_test_aothmani game_size_wrapping)


add_test(test_game_new ./game_test_sazarfane game_new)
add_test(test_game_new_empty ./game_test_sazarfane game_new_empty)
add_test(test_game_copy ./game_test_sazarfane game_copy)
add_test(test_game_equal ./game_test_sazarfane game_equal)
add_test(test_game_set_square ./game_test_sazarfane game_set_square)
add_test(test_game_get_square ./game_test_sazarfane game_get_square)
add_test(test_game_get_state ./game_test_sazarfane game_get_state)
add_test(test_game_is_black ./game_test_sazarfane game_is_black)
add_test(test_game_get_black_number ./game_test_sazarfane game_get_black_number)
add_test(test_game_is_marked ./game_test_sazarfane game_is_marked)
add_test(test_game_new_ext ./game_test_sazarfane game_new_ext)
add_test(test_game_new_empty_ext ./game_test_sazarfane game_new_empty_ext)